lox.bnf
# Lox syntax definition file using EBNF

program   ::= statement* EOF;

declaration ::= varDecl | statement;

varDecl ::= "var" IDENTIFIER ( "=" expr )? ";" ;

statement ::= exprStmt | printStmt | block ;

block     ::=  "{" declaration* "}" ;

exprStmt  ::=  expr ";" ;

printStmt ::= "print" expr ";";

expr    ::= ternary ;

ternary ::= comma "?" ternary ":" ternary ;

comma   ::= assign ("," assign)* ;

assign  ::= IDENTIFIER "=" assign | eq

eq      ::= comp ( ("!=" | "==") comp )* ;

comp    ::= term ( ( ">" | ">=" | "<" | "<=" ) term )* ;

term    ::= factor ( ( "-" | "+" ) factor )* ;

factor  ::= unary ( ("/" | "*" ) factor )* ;

unary   ::= ( "!" | "-" ) unary | primary ;

primary ::= "true" | "false" | "nil" 
        | NUMBER | STRING
        | "(" expr ")"
        | IDENTIFIER ;
